# Langbench

./: .gitignore  Makefile  README.md  bench.sh  cpp.txt  java.txt  js.txt  python.txt  rust.txt
c/: findprimes  findprimes.c  findprimes.cpp  primelooper  primelooper.cpp
findprimes/: Cargo.toml
findprimes/src/: main.rs
go/: go.mod
go/cmd/findprimes/: main.go
java/: FindPrimes.java
java/primefinder/src/: Main.java  java.txt
java/primelooper/src/: Main.java
javascript/: findprimes.js  primelooper.js  test.js
python/: findprimes.py  primelooper.py
rust/: Cargo.toml
rust/primefinder/: Cargo.toml
rust/primefinder/src/: main.rs  mod.rs  prime_finder.rs  prime_vec.rs
rust/primelooper/: Cargo.toml
rust/primelooper/src/: main.rs
rust/src/: main.rs
scripts/: primebench.sh  primefinder_bench.py  primefinder_benchmark.sh  primefinder_multithread.py  primelooper_benchmark.sh
zig/: findprimes.zig
