[package]
name = "rust_primefinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.3.0", features = ["termination"] }
tikv-jemallocator = "0.5"

[profile.release]
lto = "fat"
